--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "sinon": "^7.5.0"
   }
 }
