--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "mocha": "^6.2.1",
     "mochawesome": "^4.1.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.5"
   },
   "devDependencies": {
